# cmake-tools

./: README.md  log.cmake  propertyUtils.cmake  stringTools.cmake  utils.cmake  zip.cmake
test/: CMakeLists.txt  main.cpp
test/Hello/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h
